--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 const pageTitle = "À propos de moi";
 
 const identity = {
@@ -13,6 +15,11 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Rédaction de do
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "upperCase";
+const ajout = "le tutoriel est bon mais long";
 ---
 
 <html lang="en">
@@ -22,6 +29,17 @@ const goal = 3;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+        <style define:vars={{skillColor, fontWeight, textCase}}>
+            h1 {
+                color: purple;
+                font-size: 4rem;
+            }
+            .skill {
+                color: var(--skillColor);
+                font-weight: var(--fontWeight);
+                text-transform: var(--textCase);
+            }
+        </style>
 	</head>
 	<body>
         <a href="/">Accueil</a>
@@ -43,7 +61,7 @@ const goal = 3;
         </ul>
             <p>Voici mes compétences :</p>
             <ul>
-            {skills.map((skill) => <li>{skill}</li>)}
+            {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
 
         {happy && <p>Je suis heureux d'apprendre Astro !</p>}
@@ -51,6 +69,8 @@ const goal = 3;
         {finished && <p>J'ai terminé ce tutoriel !</p>}
 
         {goal === 3 ? <p>Mon objectif est de terminer en 3 jours.</p> : <p>Mon objectif n'est pas de 3 jours.</p>}
+
+        <p>J'ajouterais que {ajout}</p>
 
     </body>
 </html>
