--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
 const pageTitle = "Mon blog d'apprentissage d'Astro";
@@ -13,9 +15,7 @@ const pageTitle = "Mon blog d'apprentissage d'Astro";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Accueil</a>
-        <a href="/about/">À propos</a>
-        <a href="/blog/">Blog</a>
+		<Header />
 		<h1>Mon blog d'apprentissage d'Astro</h1>
         <p>Voici où je vais publier mon parcours d'apprentissage d'Astro.</p>
         <ul>
@@ -23,5 +23,11 @@ const pageTitle = "Mon blog d'apprentissage d'Astro";
             <li><a href="/posts/post-2/">Article 2</a></li>
             <li><a href="/posts/post-3/">Article 3</a></li>
         </ul>
+		<Footer />
+		<script>
+    		import "../scripts/menu.js";
+  		</script>
+  </body>
+</html>
 	</body>
 </html>
