--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
 const pageTitle = "Mon site Astro";
@@ -13,9 +15,13 @@ const pageTitle = "Mon site Astro";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Accueil</a>
-        <a href="/about/">À propos</a>
-		<a href="/blog/">Blog</a>
+		<Header />
 		<h1>Mon site Astro</h1>
+		<Footer />
+		 <script>
+    		import "../scripts/menu.js";
+  		</script>
+  </body>
+</html>
 	</body>
 </html>
