--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,33 +1,13 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
-
+import BaseLayout from '../layouts/BaseLayout.astro';
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
 const pageTitle = "Mon blog d'apprentissage d'Astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<Header />
-		<h1>Mon blog d'apprentissage d'Astro</h1>
-        <p>Voici où je vais publier mon parcours d'apprentissage d'Astro.</p>
-        <ul>
-            <li><a href="/posts/post-1/">Article 1</a></li>
-            <li><a href="/posts/post-2/">Article 2</a></li>
-            <li><a href="/posts/post-3/">Article 3</a></li>
-        </ul>
-		<Footer />
-		<script>
-    		import "../scripts/menu.js";
-  		</script>
-  </body>
-</html>
-	</body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <p>C'est ici que je vais publier sur mon parcours d'apprentissage d'Astro.</p>
+  <ul>
+    {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+  </ul>
+</BaseLayout>
